# bionic_translation

./: .gitlab-ci.yml  README.md  build.zig  build.zig.zon  meson.build
bionic_translation/: Makefile  NOTE  meson.build
bionic_translation/libc/: Makefile  libc-antiantidebug.c  libc-chk.c  libc-misc.c  libc-stdio.c  libc.c
bionic_translation/libstdc++_standalone/: Makefile
bionic_translation/linker/: Makefile  dlfcn.c  dlfcn.h  linker.c  linker.h  linker_debug.h
bionic_translation/pthread_wrapper/: Makefile  libpthread.c
bionic_translation/wrapper/: Makefile  wrapper.c
cfg.d/: bionic_translation.cfg
libc/: libc-antiantidebug.c  libc-chk.c  libc-math.c  libc-misc.c  libc-musl.c  libc-stdio.c  libc.c
linker/: config.c  config.h  dlfcn.c  linker.c  linker.h  linker_debug.h
pthread_wrapper/: libpthread.c
src/: main.zig  root.zig
